# DockPilot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md
.github/workflows/: ci.yml  release.yml
app/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
app/src/: App.tsx  state.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: cloudflare.rs  commands.rs  dockerhub.rs  error.rs  lib.rs  main.rs  runner_client.rs  ssh_install.rs  storage.rs  tunnel.rs
app/src/components/: Charts.tsx  DeployLogs.tsx  FileBrowser.tsx  LogsViewer.tsx  Menu.tsx  Primitives.tsx  Shell.tsx
app/src/lib/: api.ts  charts.ts  icons.tsx  types.ts
app/src/screens/: Auth.tsx  Containers.tsx  Domains.tsx  Monitoring.tsx  Onboarding.tsx  Palette.tsx  Resources.tsx  Servers.tsx  Settings.tsx  Wizard.tsx
runner/: Cargo.toml  Dockerfile.build  build.sh  lockethq-runner.service
runner/src/: config.rs  dbexec.rs  docker.rs  files.rs  main.rs  proxy.rs  routes.rs  stats.rs
shared/: Cargo.toml
shared/src/: lib.rs
