[workspace]
resolver = "2"
members = ["app/src-tauri", "runner", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["DockPilot"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
