[package]
name = "lockethq-app"
version.workspace = true
edition.workspace = true
description = "DockPilot — macOS server manager"

[lib]
name = "lockethq_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
lockethq-shared = { path = "../../shared" }

# HTTP client to talk to remote runners
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
rustls = { version = "0.23", features = ["ring"] }

# SSH client for runner install + port-forwarding
russh = "0.49"
russh-keys = "0.49"
async-trait = "0.1"

# Streams
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"

# Misc
directories = "5"
dirs = "5"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
urlencoding = "2"

# Embed the runner binaries at compile time
include_dir = "0.7"
